Refactor code to use easily changeable NanoCurrencySpecification class, fix misc small bugs and logging errors with payment processing.